[tool.poetry]
name = "data-analysis-100-knock"
version = "0.1.0"
description = ""
authors = ["Mikihiro SUDA <su.glasses.923@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.19.5"
pandas = "^1.2.0"
matplotlib = "^3.3.3"
scikit-learn = "^0.24.0"
networkx = "^2.5"
PuLP = "^2.4"
ortoolpy = "^0.2.38"
opencv-python = "^4.5.1"
dlib = "^19.21.1"
mecab-python3 = "^1.0.3"
xlrd = "^2.0.1"
openpyxl = "^3.0.5"

[tool.poetry.dev-dependencies]
ipykernel = "^5.4.2"
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
